better functional - no ugly stream() or collect()